--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
     border: .5px solid #C6B8A9;
     padding: 5px;
     background: #F8F5F2;
-    color: 171412;
+    color: #171412;
   }
   
   .header{
@@ -42,7 +42,7 @@
     text-align: center;
     font-weight: bold;
     border: none;
-    padding: none;
+    padding: 0;
     grid-row: 1 / span 1;
     grid-column: 1 / span 1;
   }
@@ -51,7 +51,7 @@
     margin: 0px;
     padding: 3px;
     border: none;
-    padding: none;
+    padding: 0;
     grid-row: 2 / span 1;
     grid-column: 1 / span 1;
   }
